# learn-d3d12

./: Cargo.toml  LICENSE  README.md
01_getting_started/1_1_hello_window/: Cargo.toml
01_getting_started/1_1_hello_window/src/: main.rs
01_getting_started/1_2_hello_window_clear/: Cargo.toml
01_getting_started/1_2_hello_window_clear/src/: main.rs
common/: Cargo.toml
common/src/: gfx.rs  lib.rs  os.rs  util.rs
