[workspace]
members = ["01_getting_started/*", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
common = { version = "*", default-features = false, path = "common" }

[workspace.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
]
